--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receitas Deliciosas</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -65,7 +65,7 @@
     </main>
 
     <footer>
-        <p>&copy; oi</p>
+        <p>oi</p>
 
     </footer>
 </body>
