--- a/index.html
+++ b/index.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Receitas Deliciosas</title>
+    <title>Receitinhas</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Receitas Deliciosas</h1>
+        <h1>Receitas da dani<h1>
         <ul>
             <li><a href="#inicio">Início</a></li>
             <li><a href="#categorias">Categorias</a></li>
             <li><a href="#sobre">Sobre Nós</a></li>
-            <li><a href="#contato">Contato</a></li>
         </ul>
     </header>
 
@@ -21,10 +20,10 @@
         <section id="inicio">
             <h2>Receitas em Destaque</h2>
             <div class="receita">
-                <img src="imagens/bolo-chocolate.jpg" alt="Bolo de Chocolate">
+                <img src= "Escondidinho_de_carne_moída.jpg" alt="Escondidinho">
                 <h3>Bolo de Chocolate</h3>
                 <p>Um delicioso bolo de chocolate, perfeito para qualquer ocasião.</p>
-                <a href="#bolo-chocolate" class="botao">Ver Receita</a>
+                <a href="#Escondidinho" class="botao">Ver Receita</a>
             </div>
             <div class="receita">
                 <img src="imagens/salada.jpg" alt="Salada Fresca">
