--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <h2>Receitas em Destaque</h2>
             <div class="receita">
                 <img src= "Escondidinho_de_carne_moída.jpg" alt="Escondidinho">
-                <h3>Bolo de Chocolate</h3>
-                <p>Um delicioso bolo de chocolate, perfeito para qualquer ocasião.</p>
+                <h3>Escondidinho</h3>
+                <p>Um delicioso escondidinho de carne moída,perfeito para comer nos dias de churrasco. </p>
                 <a href="#Escondidinho" class="botao">Ver Receita</a>
             </div>
             <div class="receita">
