--- a/index.html
+++ b/index.html
@@ -26,43 +26,26 @@
                 <a href="#Escondidinho" class="botao">Ver Receita</a>
             </div>
             <div class="receita">
-                <img src="imagens/salada.jpg" alt="Salada Fresca">
-                <h3>Salada Fresca</h3>
-                <p>Uma salada leve e refrescante, ideal para o verão.</p>
-                <a href="#salada-fresca" class="botao">Ver Receita</a>
+                <img src="fricasse-1628262666.webp" alt="fricase-1628262666">
+                <h3>Fricasse de frango</h3>
+                <p>Uma escolha perfeita para dias comemorativos.</p>
+                <a href="#fricasse" class="botao">Ver Receita</a>
             </div>
-        </section>
+            <div class="receita">
+                <img src="fricasse-1628262666.webp" alt="fricase-1628262666">
+                <h3>Fricasse de frango</h3>
+                <p>Uma escolha perfeita para dias comemorativos.</p>
+                <a href="#fricasse" class="botao">Ver Receita</a>
+            </div>
 
-        <section id="categorias">
-            <h2>Categorias</h2>
-            <ul>
-                <li><a href="#">Entradas</a></li>
-                <li><a href="#">Pratos Principais</a></li>
-                <li><a href="#">Sobremesas</a></li>
-                <li><a href="#">Veganas</a></li>
-            </ul>
         </section>
+       
+    </section>
 
         <section id="sobre">
             <h2>Sobre Nós</h2>
-            <p>Bem-vindo ao nosso site de receitas! Aqui você encontrará uma variedade de receitas deliciosas para todos os gostos.</p>
+            <p>Bem-vindo ao meu site de receitas! Aqui você encontrará uma variedade de receitas deliciosas.</p>
         </section>
-
-        <section id="contato">
-            <h2>Contato</h2>
-            <p>Se você tiver alguma dúvida ou sugestão, entre em contato conosco!</p>
-            <form>
-                <label for="nome">Nome:</label>
-                <input type="text" id="nome" name="nome" required>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-                <label for="mensagem">Mensagem:</label>
-                <textarea id="mensagem" name="mensagem" required></textarea>
-                <button type="submit">Enviar</button>
-            </form>
-        </section>
-    </main>
-
     <footer>
         <p>oi</p>
 
