--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1>Receitas da dani<h1>
         <ul>
             <li><a href="#inicio">Início</a></li>
-            <li><a href="#categorias">Categorias</a></li>
             <li><a href="#sobre">Sobre Nós</a></li>
+
         </ul>
     </header>
 
@@ -26,16 +26,16 @@
                 <a href="#Escondidinho" class="botao">Ver Receita</a>
             </div>
             <div class="receita">
-                <img src="fricasse-1628262666.webp" alt="fricase-1628262666">
+                <img src="fricasse-1628262666.webp" alt="Fricasse">
                 <h3>Fricasse de frango</h3>
                 <p>Uma escolha perfeita para dias comemorativos.</p>
                 <a href="#fricasse" class="botao">Ver Receita</a>
             </div>
             <div class="receita">
-                <img src="fricasse-1628262666.webp" alt="fricase-1628262666">
+                <img src="lasanha-de-carne-com-requeijao-Terra-1-1200x800.jpg" alt="lasanha">
                 <h3>Fricasse de frango</h3>
                 <p>Uma escolha perfeita para dias comemorativos.</p>
-                <a href="#fricasse" class="botao">Ver Receita</a>
+                <a href="#lasanha" class="botao">Ver Receita</a>
             </div>
 
         </section>
@@ -48,7 +48,6 @@
         </section>
     <footer>
         <p>oi</p>
-
     </footer>
 </body>
 </html>
