--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             </div>
             <div class="receita">
                 <img src="lasanha-de-carne-com-requeijao-Terra-1-1200x800.jpg" alt="lasanha">
-                <h3>Fricasse de frango</h3>
-                <p>Uma escolha perfeita para dias comemorativos.</p>
+                <h3>Lasanha de carne com requeijão cremoso</h3>
+                <p>Aquele dia em que você está com aquela vontade avassaladora de algo bem cremoso.</p>
                 <a href="#lasanha" class="botao">Ver Receita</a>
             </div>
 
