--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <ul>
                     <li><a href="#inicio">Início</a></li>
                     <li><a href="#sobre">Sobre Nós</a></li>
+                    <li><a href="receita">Receitas</a>
 
                 </ul>
     </header>
@@ -40,13 +41,22 @@
                 <a href="#lasanha" class="botao">Ver Receita</a>
             </div>
 
+            <div class="receita">
+                <img src="macarrao-carbonara-1.webp"
+                <h4>Macarrão a carbonara</h4>
+                <p>Feito para os dias em que você quer dar uma de MasterChef.</p>
+                <a href="#macarrão" class="botao">Ver receita</a>
+            </div>
+
         </section>
 
         </section>
 
         <section id="sobre">
-            <h2>Sobre Nós</h2>
-            <p>Bem-vindo ao meu site de receitas! Aqui você encontrará uma variedade de receitas deliciosas.</p>
+            <h2>Sobre Mim</h2>
+            <p>Bem-vindo ao meu site de receitas! 
+               
+            </p>
         </section>
         <footer>
             <p>oi</p>
