--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         <h1>Receitas da dani<h1>
                 <ul>
                     <li><a href="#inicio">Início</a></li>
-                    <li><a href="#sobre">Sobre Nós</a></li>
+                    <li><a href="#sobre">Sobre Mim</a></li>
                     <li><a href="receita">Receitas</a>
+                    <li>
 
                 </ul>
     </header>
@@ -42,7 +43,7 @@
             </div>
 
             <div class="receita">
-                <img src="macarrao-carbonara-1.webp"
+                <img src="macarrao-carbonara-1.webp" alt="carbonara">
                 <h4>Macarrão a carbonara</h4>
                 <p>Feito para os dias em que você quer dar uma de MasterChef.</p>
                 <a href="#macarrão" class="botao">Ver receita</a>
@@ -54,8 +55,8 @@
 
         <section id="sobre">
             <h2>Sobre Mim</h2>
-            <p>Bem-vindo ao meu site de receitas! 
-               
+            <p>Bem-vindo ao meu site de receitas!
+
             </p>
         </section>
         <footer>
