--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
             <h7>Vamos Conversar?</h7>
             <p>Adoraria fazer parte dos seus momentos especiais ou compartilhar meu conhecimento com você. Me acompanhe
                 nas redes sociais ou entre em contato para encomendas e parcerias!</p>
-                <p> Instagram: @chefdanielly
-                    WhatsApp: (XX) XXXXX-XXXX
-                    E-mail: danielly@chef.com</p>
+                <p> Instagram: @chefdanielly</p>
+                <p>WhatsApp: (XX) XXXXX-XXXX</p>
+                <p>E-mail: danielly@chef.com</p>
 
             <section>
                 <footer>
