--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h1>Receitas da dani<h1>
                 <ul>
                     <li><a href="#inicio">Início</a></li>
-                    <li><a href="#sobre">Sobre Mim</a></li>
-
+                    <li><a href="sobre.html">Sobre Mim</a></li>
+                
                 </ul>
     </header>
 
@@ -51,37 +51,8 @@
 
         </section>
 
-        <section id="sobre">
-            <h2>Sobre Mim</h2>
-            <p>Bem-vindo ao meu site de receitas!</p>
-            <p>Olá! Eu sou Danielly, uma cozinheira apaixonada por transformar ingredientes simples em experiências
-                gastronômicas memoráveis. Com criatividade, técnica e um toque de amor, faço da cozinha o meu palco,
-                onde cada prato conta uma história.</p>
-            <h3>Minha Jornada</h3>
-            <p>Desde criança, encontrei na cozinha um lugar de afeto e descobertas. Ajudava minha avó a preparar doces
-                caseiros e, desde então, soube que a culinária seria minha vida. Profissionalizei meu talento através de
-                cursos, muita prática e uma pitada de ousadia, sempre buscando inovar sem perder a essência da comida
-                feita com alma.</p>
-            <h4>Meu Diferencial</h4>
-            <p>Cozinha Afetiva: Recrio sabores da infância com um toque contemporâneo.</p>
-            <p>Técnica e Sensibilidade: Domino desde pratos tradicionais até técnicas gourmet.</p>
-            <p>Festa no Paladar: Doces, salgados e pratos principais que encantam todos os sentidos.</p>
-            <h5> O Que Faço</h5>
-            <p>Buffets Personalizados: Para casamentos, festas e eventos íntimos.</p>
-            <p>Cursos e Workshops: Ensino desde o básico até segredos profissionais.</p>
-            <p>Encomendas Especiais: Bolos artesanais, pratos temáticos e muito mais!</p>
-            <h6>Minha Filosofia</h6>
-            <p> Acredito que cozinhar vai além de alimentar—é um ato de generosidade. Cada detalhe, desde a seleção dos
-                ingredientes até a apresentação, é pensado para trazer alegria e conexão.</p>
-            <p>Adoraria fazer parte dos seus momentos especiais ou compartilhar meu conhecimento com você. Me acompanhe
-                nas redes sociais ou entre em contato para encomendas e parcerias!</p>
-                <p> Instagram: @chefdanielly</p>
-                <p>WhatsApp: (XX) XXXXX-XXXX</p>
-                <p>E-mail: danielly@chef.com</p>
-
-            <section>
                 <footer>
-                    <p>oi</p>
+                
                 </footer>
 </body>
 
