--- a/index.html
+++ b/index.html
@@ -25,26 +25,26 @@
                 <img src="Escondidinho_de_carne_moída.jpg" alt="Escondidinho">
                 <h3>Escondidinho</h3>
                 <p>Um delicioso escondidinho de carne moída, perfeito para comer nos dias de churrasco. </p>
-                <a href="#Escondidinho" class="botao">Ver Receita</a>
+                <a href="escondidinho.html" class="botao">Ver Receita</a>
             </div>
             <div class="receita">
                 <img src="fricasse-1628262666.webp" alt="Fricasse">
                 <h3>Fricasse de frango</h3>
                 <p>Uma escolha perfeita para dias comemorativos.</p>
-                <a href="#fricasse" class="botao">Ver Receita</a>
+                <a href="fricasse.html" class="botao">Ver Receita</a>
             </div>
             <div class="receita">
                 <img src="lasanha-de-carne-com-requeijao-Terra-1-1200x800.jpg" alt="lasanha">
                 <h3>Lasanha de carne com requeijão cremoso</h3>
                 <p>Aquele dia em que você está com aquela vontade avassaladora de algo bem cremoso.</p>
-                <a href="#lasanha" class="botao">Ver Receita</a>
+                <a href="lasanha.html" class="botao">Ver Receita</a>
             </div>
 
             <div class="receita">
                 <img src="macarrao-carbonara-1.webp" alt="carbonara">
                 <h4>Macarrão a carbonara</h4>
                 <p>Feito para os dias em que você quer dar uma de MasterChef.</p>
-                <a href="#macarrão" class="botao">Ver receita</a>
+                <a href="carbonara.html" class="botao">Ver receita</a>
             </div>
 
         </section>
