--- a/escondidinho.html
+++ b/escondidinho.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-
+    <header>
+        <h1>Receitas da dani<h1>
+                <ul>
+                    <li><a href="#inicio">Início</a></li>
+                    <li><a href="sobre.html">Sobre Mim</a></li>
+                
+                </ul>
+    </header>
+    <h1>oi</h1>
 </body>
-
 </html>
