--- a/lasanha.html
+++ b/lasanha.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Receitas da dani<h1>
+                <ul>
+                    <li><a href="#inicio">Início</a></li>
+                    <li><a href="sobre.html">Sobre Mim</a></li>
+                
+                </ul>
+    </header>
+    <h1>oi</h1>  
 </body>
 </html>
