--- a/carbonara.html
+++ b/carbonara.html
@@ -17,16 +17,28 @@
 
                 </ul>
     </header>
-    <h1>Ingredientes</h1>
+    <h1> Ingredientes</h1>
     <ol>200g de espaguete (ou outro macarrão longo)</ol>
     <ol> 100g de guanciale (ou pancetta, se não achar) - cortado em cubinhos</ol>
     <ol> 2 gemas + 1 ovo inteiro (frescos e de qualidade)</ol>
     <ol> 40g de queijo pecorino romano (ou parmesão, se preferir) - ralado na hora</ol>
     <ol> Pimenta-do-reino preta moída na hora</ol>
     <ol> Sal a gosto</ol>
-    
+
     <h2>Modo de Preparo</h2>
-    
+    <li> - Em uma panela com água fervente e sal (como água do mar), cozinhe o espaguete 0al dente (1 minuto a menos do
+        que o tempo da embalagem).</li>
+    <li> - Em uma frigideira sem óleo, frite o guanciale em fogo médio até ficar crocante. Reserve um pouco da gordura
+        derretida.</li>
+    <li> - Em uma tigela, misture as gemas, o ovo inteiro, o queijo ralado e bastante pimenta-do-reino. Bata até ficar
+        homogêneo.</li>
+   
+        <h3>Monte a carbonara</h3>
+    <ol> - Escorra o macarrão (reservando um pouco da água do cozimento) e misture-o na frigideira com o guanciale,
+        desligando o fogo.</ol>
+    <ol> - Adicione o creme de ovos e queijo, mexendo rapidamente para que o calor residual cozinhe os ovos sem virar
+        omelete.</ol>
+    <ol> - Se necessário, adicione um pouco da água reservada para dar cremosidade.</ol>
 </body>
 
 </html>
