--- a/carbonara.html
+++ b/carbonara.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Receitas da dani<h1>
                 <ul>
-                    <li><a href="#index.html">Início</a></li>
+                    <li><a href="index.html">Início</a></li>
                     <li><a href="sobre.html">Sobre Mim</a></li>
 
                 </ul>
@@ -26,19 +26,30 @@
     <ol> Sal a gosto</ol>
 
     <h2>Modo de Preparo</h2>
-    <li> - Em uma panela com água fervente e sal (como água do mar), cozinhe o espaguete 0al dente (1 minuto a menos do
-        que o tempo da embalagem).</li>
-    <li> - Em uma frigideira sem óleo, frite o guanciale em fogo médio até ficar crocante. Reserve um pouco da gordura
-        derretida.</li>
-    <li> - Em uma tigela, misture as gemas, o ovo inteiro, o queijo ralado e bastante pimenta-do-reino. Bata até ficar
-        homogêneo.</li>
-   
-        <h3>Monte a carbonara</h3>
-    <ol> - Escorra o macarrão (reservando um pouco da água do cozimento) e misture-o na frigideira com o guanciale,
+    <ol> - Em uma panela com água fervente e sal (como água do mar), cozinhe o espaguete 0al dente (1 minuto a menos do
+        que o tempo da embalagem).</ol>
+    <ol> - Em uma frigideira sem óleo, frite o guanciale em fogo médio até ficar crocante. Reserve um pouco da gordura
+        derretida.</ol>
+    <ol> - Em uma tigela, misture as gemas, o ovo inteiro, o queijo ralado e bastante pimenta-do-reino. Bata até ficar
+        homogêneo.</ol>
+
+    <h3>Monte a carbonara</h3>
+    <ol> Escorra o macarrão (reservando um pouco da água do cozimento) e misture-o na frigideira com o guanciale,
         desligando o fogo.</ol>
-    <ol> - Adicione o creme de ovos e queijo, mexendo rapidamente para que o calor residual cozinhe os ovos sem virar
+    <ol> Adicione o creme de ovos e queijo, mexendo rapidamente para que o calor residual cozinhe os ovos sem virar
         omelete.</ol>
-    <ol> - Se necessário, adicione um pouco da água reservada para dar cremosidade.</ol>
+    <ol> Se necessário, adicione um pouco da água reservada para dar cremosidade.</ol>
+
+    <h4>Finalize e sirva</h4>
+    <ol>Ajuste o sal e acrescente mais pimenta e queijo ralado por cima.</ol>
+    <ol> - Sirva imediatamente (a carbonara esfria rápido e perde a cremosidade).</ol>
+
+    <h5>Dicas importantes</h5>
+    <ol>Nunca use creme de leite. A carbonara original leva apenas ovos, queijo e gordura do guanciale.</ol>
+    <ol>Os ovos devem ficar cremosos, não cozidos demais.</ol>
+    <ol>Se não achar guanciale (toucinho italiano), use pancetta ou bacon, mas o sabor será diferente.</ol>
+
+
 </body>
 
 </html>
