--- a/carbonara.html
+++ b/carbonara.html
@@ -42,7 +42,7 @@
 
     <h4>Finalize e sirva</h4>
     <ol>Ajuste o sal e acrescente mais pimenta e queijo ralado por cima.</ol>
-    <ol> - Sirva imediatamente (a carbonara esfria rápido e perde a cremosidade).</ol>
+    <ol>Sirva imediatamente (a carbonara esfria rápido e perde a cremosidade).</ol>
 
     <h5>Dicas importantes</h5>
     <ol>Nunca use creme de leite. A carbonara original leva apenas ovos, queijo e gordura do guanciale.</ol>
