--- a/fricasse.html
+++ b/fricasse.html
@@ -1,20 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>Receitas da dani<h1>
                 <ul>
-                    <li><a href="#inicio">Início</a></li>
+                    <li><a href="index.html">Início</a></li>
                     <li><a href="sobre.html">Sobre Mim</a></li>
-                
+
                 </ul>
     </header>
-    <h1>oi</h1>
+    <h1>Ingrdientes</h1>
+
+    <ol>500g de peito de frango cozido e desfiado</ol>
+    <ol>1 lata de milho verde (escorrido)</ol>
+    <ol>1 xícara (chá) de ervilhas (opcional)</ol>
+    <ol>1 cebola média picada</ol>
+    <ol>2 dentes de alho picados</ol>
+    <ol>2 colheres (sopa) de manteiga ou margarina</ol>
+    <ol>3 colheres (sopa) de farinha de trigo</ol>
+    <ol>2 xícaras (chá) de leite</ol>
+    <ol>1 xícara (chá) de caldo de frango (ou água do cozimento)</ol>
+    <ol>1 caixinha de creme de leite (200g)</ol>
+    <ol>100g de mussarela ralada (para gratinar)</ol>
+    <ol>1 xícara (chá) de batata palha (para finalizar)</ol>
+    <ol>Sal, pimenta-do-reino e cheiro-verde a gosto</ol>
+
+    <h2>Modo de Preparo</h2>
+   
+    <ol> Cozinhe o frango: Tempere o frango com sal, alho e cebola, cozinhe até ficar macio e depois desfie. Reserve o
+        caldo.</ol>
+    <ol>Refogue os vegetais: Em uma panela, derreta a manteiga e refogue a cebola e o alho até dourarem. Adicione o
+        milho e a ervilha, misturando bem.</ol>
+    <ol>Prepare o creme: Adicione a farinha de trigo e mexa rapidamente. Aos poucos, junte o leite e o caldo de frango,
+        mexendo sem parar até engrossar.</ol>
+    <ol>Incorpore o frango: Acrescente o frango desfiado, tempere com sal e pimenta, misture bem e desligue o fogo.
+        Adicione o creme de leite e o cheiro-verde.</ol>
+    <ol>Monte o fricasse: Transfira a mistura para um refratário, cubra com mussarela ralada e leve ao forno
+        pré-aquecido (180°C) por cerca de 15 minutos, até gratinar.</ol>
 </body>
+
 </html>
