--- a/lasanha.html
+++ b/lasanha.html
@@ -10,11 +10,10 @@
     <header>
         <h1>Receitas da dani<h1>
                 <ul>
-                    <li><a href="#inicio">Início</a></li>
+                    <li><a href="index.html">Início</a></li>
                     <li><a href="sobre.html">Sobre Mim</a></li>
                 
                 </ul>
     </header>
-    <h1>oi</h1>  
 </body>
 </html>
