--- a/escondidinho.html
+++ b/escondidinho.html
@@ -1,20 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>Receitas da dani<h1>
                 <ul>
-                    <li><a href="#inicio">Início</a></li>
+                    <li><a href="index.html">Início</a></li>
                     <li><a href="sobre.html">Sobre Mim</a></li>
-                
+
                 </ul>
     </header>
-    <h1>oi</h1>
+    <h1>Ingredientes para o purê</h1>
+
+    <ol>1 kg de batatas (descascadas e cortadas em cubos)</ol>
+    <ol>3 colheres (sopa) de manteiga</ol>
+    <ol>1 xícara (chá) de leite morno</ol>
+    <ol>Sal e pimenta-do-reino a gosto</ol>
+    <ol>1 pitada de noz-moscada (opcional)</ol>
+
+    <h1>Ingredientes para o recheio de carne moída:</h1>
+
+    <ol>500 g de carne moída (patinho ou músculo)</ol>
+    <ol>1 cebola picada</ol>
+    <ol>2 dentes de alho picados</ol>
+    <ol>1 tomate picado (sem sementes)</ol>
+    <ol>1 pimentão verde picado (opcional)</ol>
+    <ol>2 colheres (sopa) de extrato de tomate</ol>
+    <ol>1 xícara (chá) de água ou caldo de carne</ol>
+    <ol>1 colher (chá) de cominho em pó</ol>
+    <ol>Sal, pimenta e cheiro-verde a gosto</ol>
+    <ol>1 colher (sopa) de azeite</ol>
+
+    <h1>Para Finalizar</h1>
+
+    <ol>200 g de queijo mussarela ralado</ol>
+    <ol>100 g de queijo parmesão ralado</ol>
+    <ol>Manteiga para untar</ol>
+
+    <h1>Modo de Preparo</h1>
+    <ol>
+        <li>Purê de Batata</li>
+    </ol>
+
+    <ol>Cozinhe as batatas em água com sal até ficarem macias (cerca de 15-20 min).</ol>
+    <ol>Escorra e amasse bem com um espremedor.</ol>
+    <ol>Adicione a manteiga, o leite, sal, pimenta e noz-moscada. Misture até ficar cremoso. Reserve.</ol>
+
+    <ol>
+        <li>Recheio de Carne Moída</li>
+    </ol>
+
+    <ol>Em uma panela, aqueça o azeite e refogue a cebola e o alho até dourarem.</ol>
+    <ol>Acrescente a carne moída e mexa até soltar o líquido.</ol>
 </body>
+
 </html>
